# asseemg-takeout

./: .gitignore  .npmrc  README.md  TASK.md  bts.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.claude/: settings.local.json
.cursor/plans/: otimização_bundle_build_startup_436873f6.plan.md
.cursor/rules/: takeout-offline.mdc  testing-regression.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-measure.yml
.ruler/: bts.md  ruler.toml
apps/native/: .env.example  .gitignore  README.md  app.json  eas.json  global.css  jest.config.js  jest.node.config.js  jest.rn.config.js  jest.rn.setup.ts  metro.config.js  package.json  react-native-shim.js  tamagui.config.ts  tsconfig.json
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/.cargo/: config.toml
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs
apps/web/src-tauri/src/api/: db.rs  mod.rs  thevent.rs  ws.rs
apps/web/src-tauri/src/api/handlers/: mod.rs
apps/web/src-tauri/src/api/repository/: event_log.rs  events.rs  legacy.rs  locks.rs  mod.rs  pairing.rs  participants.rs  sync_import.rs  takeout.rs
apps/web/src-tauri/src/api/services/: mod.rs  pairing.rs  takeout.rs
apps/web/src-tauri/tests/: api_integration.rs
docs/: architecture.md  audit.md  data-and-realtime.md  react-native.md  runbook.md  rust.md  tauri.md  testing.md
patches/: @expo__metro-runtime@6.1.2.patch
scripts/: collect-artifacts.mjs  constants.mjs  generate-manifest.mjs  measure-build.mjs  verify-change-policy.mjs
(+255 files in other folders)
