[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["image-png"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
axum = { version = "0.7", features = ["json", "multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
local-ip-address = "0.6"
deunicode = "1.6"

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"
codegen-units = 2

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
